--- a/style/client.scss
+++ b/style/client.scss
@@ -584,7 +584,7 @@ aside {
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: space-between;
+            // justify-content: space-between;
             padding: 16px;
             .left {
                 display: flex;
