--- a/style/client.scss
+++ b/style/client.scss
@@ -644,6 +644,9 @@ aside {
                 }
             }
         }
+        + .item {
+            margin-bottom: 32px;
+        }
     }
 }
 .desktop-content {
