--- a/style/client.scss
+++ b/style/client.scss
@@ -390,7 +390,8 @@ aside {
                             line-height: 16.94px;
                             letter-spacing: 0%;
                             @include mobile {
-                                margin-bottom: 13px;
+                                height: 40px;
+                                margin-bottom: 7px;
                             }
                         }
                         .information-item {
