make center for productname

--- a/style/client.css
+++ b/style/client.css
@@ -460,6 +460,8 @@ aside .sidebar-footer .hotline {
 
 @media (max-width: 1023px) {
   .card .card-content .card-body-content .sub-item-list .sub-item .information .product-name {
+    display: flex;
+    align-items: center;
     height: 40px;
     margin-bottom: 7px;
   }
