--- a/style/client.scss
+++ b/style/client.scss
@@ -390,6 +390,8 @@ aside {
                             line-height: 16.94px;
                             letter-spacing: 0%;
                             @include mobile {
+                                display: flex;
+                                align-items: center;
                                 height: 40px;
                                 margin-bottom: 7px;
                             }
